# fetch-foods

./: .gitignore  Pipfile  README.md  a.py  app.py  b.MD  b.py  delivery.py  log.csv  market.py  menu.py  notify.py  pyproject.toml  school.py  streamlit_app.py  upload_content.py
