[tool.poetry]
name = "fetch-foods"
version = "0.1.0"
description = ""
authors = ["Icerawe <icerawe@live.com>"]
readme = "README.md"
packages = [{include = "fetch_foods"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
